                   ===============================
                   Release Notes for Samba 3.0.25b
                             June 20, 2007
                   ===============================

This is the third production release of the Samba 3.0.25 code 
base and is the version that servers should be run for for all 
current bug fixes.  

Major bug fixes included in Samba 3.0.25b are:

  o Offline caching of files with Windows XP/Vista clients.
  o Improper cleanup of expired or invalid byte range locks 
    on files.
  o Crashes is idmap_ldap and idmap_rid.


######################################################################
Changes
#######

Changes since 3.0.25a
---------------------

o   Jeremy Allison <jra@samba.org>
    * BUG 4655: Fix client parsing bug in spoolss EnumPrinterDataEx().
    * Ensure that proper oplock break requests occur during file open
      and performing internal checks for compatible open modes.
    * Fix offline file caching with Windows XP/Vista clients.
    * Coverity fixes.
    * Ensure that winbindd reports the correct client connection
      details in response to a SIGUSR2.
    * Fix timespec_current() to return the correct nano-second time.
    * Fix lock logic inconsistencies in tdb_traverse().
    * Remove restriction on string length for rpcclient commands.
    * BUG 4683: Fix LSA crash bug.
    * BUG 3204: Fix file descriptor leak in the parent winbindd when
      child processes hang.
    * Avoid calling rename_open_files() when the old and new names 
      are identical.
    * BUG 4689: Fix bug in new change notify code caused by not
      ignoring the max_params_return value and as a resulting
      returning truncated names.
    * Fix sync_file() to return NTSTATUS and return this on failure in
      the write reply path.
    * BUG 4678,4697: Fix token creation for clear text logins.  


o   Jacob Berkman <jberkman@novell.com>
    * BUG 4566: Pass password data to krb5_prompter.

